[package]
name = "rotopong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
impacted = { version = "1.3.0", features = ["bevy-06"] }
bevy-inspector-egui = "0.9.0"
bevy_egui = "0.12.1"
